--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sei7-project-2",
   "version": "1.0.0",
   "description": "Auction App",
-  "main": "server.js",
+  "main": "nodemon server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
