--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "sei7-project-2",
   "version": "1.0.0",
   "description": "Auction App",
-  "main": "nodemon server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
