--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-sessions": "^1.0.6",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth": "^2.0.0"
   }
